<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_gradient">

            <TextView
                android:id="@+id/nameCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="22sp">

            </TextView>

            <TextView
                android:id="@+id/expenseCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:text="@string/your_total"
                android:textColor="@color/white"
                android:textSize="22sp"
                tools:ignore="RelativeOverlap">

            </TextView>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@+id/nameCardView">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/TlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/turkish_liras"
            android:textSize="13sp"
            app:cornerRadius="16dp"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sterlinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/white"
            android:textSize="13sp"
            android:text="@string/pound"
            android:textColor="#f7b100"
            app:cornerRadius="16dp"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/euroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="13sp"
            android:backgroundTint="@android:color/white"
            android:text="@string/euro"
            android:textColor="#f7b100"
            app:cornerRadius="16dp"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dollarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="13sp"
            android:backgroundTint="@android:color/white"
            android:text="@string/dollar"
            android:textColor="#f7b100"
            app:cornerRadius="16dp"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f7b100"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:textColor="@color/white"
        app:icon="@drawable/ic_plus"
        android:elevation="3dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>